fix(overlay): add a z-index. (#615)

--- a/src/core/overlay/overlay.scss
+++ b/src/core/overlay/overlay.scss
@@ -19,4 +19,5 @@
   position: absolute;
   pointer-events: auto;
   box-sizing: border-box;
+  z-index: 1;
 }
